content/_generated-doc/3.2/config/quarkus-scheduler.adoc

:summaryTableId: quarkus-scheduler
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-scheduler_configuration]]link:#quarkus-scheduler_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-scheduler_quarkus-scheduler-cron-type]]`link:#quarkus-scheduler_quarkus-scheduler-cron-type[quarkus.scheduler.cron-type]`


[.description]
--
The syntax used in CRON expressions.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SCHEDULER_CRON_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SCHEDULER_CRON_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
`cron4j`, `quartz`, `unix`, `spring`, `spring53` 
|`quartz`


a|icon:lock[title=Fixed at build time] [[quarkus-scheduler_quarkus-scheduler-metrics-enabled]]`link:#quarkus-scheduler_quarkus-scheduler-metrics-enabled[quarkus.scheduler.metrics.enabled]`


[.description]
--
Scheduled task metrics will be enabled if a metrics extension is present and this value is true.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SCHEDULER_METRICS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SCHEDULER_METRICS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-scheduler_quarkus-scheduler-tracing-enabled]]`link:#quarkus-scheduler_quarkus-scheduler-tracing-enabled[quarkus.scheduler.tracing.enabled]`


[.description]
--
Tracing will be enabled if the OpenTelemetry extension is present and this value is true.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SCHEDULER_TRACING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SCHEDULER_TRACING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-scheduler_quarkus-scheduler-enabled]]`link:#quarkus-scheduler_quarkus-scheduler-enabled[quarkus.scheduler.enabled]`


[.description]
--
If schedulers are enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SCHEDULER_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SCHEDULER_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-scheduler_quarkus-scheduler-overdue-grace-period]]`link:#quarkus-scheduler_quarkus-scheduler-overdue-grace-period[quarkus.scheduler.overdue-grace-period]`


[.description]
--
Scheduled task will be flagged as overdue if next execution time is exceeded by this period.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SCHEDULER_OVERDUE_GRACE_PERIOD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SCHEDULER_OVERDUE_GRACE_PERIOD+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`1S`


a| [[quarkus-scheduler_quarkus-scheduler-start-mode]]`link:#quarkus-scheduler_quarkus-scheduler-start-mode[quarkus.scheduler.start-mode]`


[.description]
--
Scheduler can be started in different modes. By default, the scheduler is not started unless a `io.quarkus.scheduler.Scheduled` business method is found.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SCHEDULER_START_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SCHEDULER_START_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
tooltip:normal[The scheduler is not started unless a `io.quarkus.scheduler.Scheduled` business method is found.], tooltip:forced[The scheduler will be started even if no scheduled business methods are found.

This is necessary for "pure" programmatic scheduling.], tooltip:halted[Just like the `forced` mode but the scheduler will not start triggering jobs until `Scheduler++#++resume()` is called.

This can be useful to run some initialization logic that needs to be performed before the scheduler starts.] 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
